barbie fast project challange 24h

--- a/index.html
+++ b/index.html
@@ -2741,11 +2741,13 @@
                     <button id="filmesBtn">Filmes</button>
                     <button id="seriesBtn">Series</button>
                 </div>
+                <!-- filmes -->
                 <div id="filmes" class="allFilmesSeries">
+                    
                 </div>
-
-
+                <!-- series -->
                 <div id="series" class="allFilmesSeries">
+                
                 </div>
             </div>
         </section>
